<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="177dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="107dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="442dp"
        android:text="@string/demo_yazilimi"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="DEMO YAZILIMI" />

    <Button
        android:id="@+id/topcik"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="343dp"
        android:background="@color/colorPrimaryDark"
        android:backgroundTint="@color/colorAccent"
        android:elevation="0dp"
        android:text="@string/toplama_cikarma"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/harita"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="250dp"
        android:background="@color/colorPrimary"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/harita"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topcik" />

</android.support.constraint.ConstraintLayout>